--- a/IRIS_ANN.ipynb
+++ b/IRIS_ANN.ipynb
@@ -7,7 +7,7 @@
       "name": "IRIS_ANN.ipynb",
       "provenance": [],
       "mount_file_id": "1-pOkqTM9vioL5p_DqDuIqT_rZUIAVgur",
-      "authorship_tag": "ABX9TyPA+7j+FdfWAiCLxxS2ym+z",
+      "authorship_tag": "ABX9TyNoIu8j+Y2h5tWbicFibuYM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,11 +230,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0AsJjkdpqjfP",
-        "outputId": "bba7e0f5-637c-4b2a-cdd4-58ce7b95ad39"
+        "id": "0AsJjkdpqjfP"
       },
       "source": [
         "converter = tf.lite.TFLiteConverter.from_keras_model(build_fn)\n",
@@ -245,38 +241,12 @@
         "print('Float model size = %dKBs.' % float_model_size)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "INFO:tensorflow:Assets written to: /tmp/tmpn14en91f/assets\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:tensorflow:Assets written to: /tmp/tmpn14en91f/assets\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Float model size = 1KBs.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Lgp_nWzjtwU1",
-        "outputId": "0ea1c17f-60e6-4908-e47c-a15ae6ec038b"
+        "id": "Lgp_nWzjtwU1"
       },
       "source": [
         "# Re-convert the model to TF Lite using quantization.\n",
@@ -290,40 +260,12 @@
         "      % (quantized_model_size * 100 / float_model_size))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "INFO:tensorflow:Assets written to: /tmp/tmp5yshkpby/assets\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:tensorflow:Assets written to: /tmp/tmp5yshkpby/assets\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Quantized model size = 2KBs,\n",
-            "which is about 106% of the float model size.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "id": "rw9Sm3YaeiwH",
-        "outputId": "7068d1fc-efa0-4072-ed35-68b0eeb528cf"
+        "id": "rw9Sm3YaeiwH"
       },
       "source": [
         "# Save the model to file to the Downloads directory\n",
@@ -338,89 +280,12 @@
         "print('`model` has been downloaded')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "download(\"download_41a4004c-00d0-4ea4-94cb-003d3076bf1c\", \"Saksham_Bansal.tflite\", 1992)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "`model` has been downloaded\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "id": "2fRv4-intwg-",
-        "outputId": "e34dc16e-36a9-49b7-b36b-9b18e054708b"
+        "id": "2fRv4-intwg-"
       },
       "source": [
         "f = open('Saksham_Bansal_Quant.tflite', \"wb\")\n",
@@ -431,82 +296,10 @@
         "from google.colab import files\n",
         "files.download('Saksham_Bansal_Quant.tflite')\n",
         "\n",
-        "print('`mnist.tflite` has been downloaded')"
+        "print('`Quant tflite` has been downloaded')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "download(\"download_3f0eb015-1604-4f2e-b746-9f4f8aa8ce06\", \"Saksham_Bansal_Quant.tflite\", 2112)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "`mnist.tflite` has been downloaded\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
